# aoc2024

./: .gitignore  .ignore  build.zig  day1.ml  day1_lexer.mll  day1_parser.mly  day2.ml  day2_lexer.mll  day2_parser.mly  day3.ml  day3_lexer.mll  day3_node.ml  day3_parser.mly  dune
.helix/: languages.toml
lib/: day1.ml  dune
src/: day1.zig  day14.zig  day16.zig  day17.zig  day22.zig  day24.zig  day25.zig  day4.zig  day5.zig  day6.zig  day8.zig
